CHANGES IN VERSION 1.1.7 (2013-x-y)
-----------------------

NEW FEATURES
    
    o Added favoriteCount field to the status class, i.e. x$getFavoriteCount()


BUG FIXES

    o Fixed a bug in the assignment of latitude/longitude for tweets, these
    will now be properly populated
    
    o users$toDataFrame will now honor the stringsAsFactors argument

    o getFavoritesCount() will now work properly on users.


CHANGES IN VERSION 1.1.6 (2013-04-05)
------------------------

BUG FIXES

    o Fixed a bug in searchTwitter which would fill the tail end of a query
    with duplicated tweets if the user requested more than available
    
    o Changed showStatus to use character based input due to large IDs

CHANGES IN VERSION 1.1.5 (2013-03-26)
------------------------

NEW FEATURES

    - Changed 'blockOnRateLimit' (boolean) to 'retryOnRateLimit' (integer). If
     this value is supplied (to any of the twitteR API wrappers) the system
     will retry up to N times if Twitter's rate limit in effect. If the 
     retry limit is reached (even if it was 0) twitteR will now try to return
     any partial results that had been accumulated prior to the rate limit
     (with a warning)
   - Added function getTwitterOAuth(consumer_key, consumer_secret) which is a 
     wrapper around the ROAuth creation/handshaking process which embeds the
     Twitter URLs. Will also call registerTwitterOAuth for you and then return
     the OAuth credential so you can save it for future use if you wish.
 
USER VISIBLE CHANGES  
   - ROAuth (>= 0.9.4) is now a Depends

CHANGES IN VERSION 1.1.4 (2013-03-18)
------------------------

USER VISIBLE CHANGES

   - Allow for by-hour filtering in since/util

CHANGES IN VERSION 1.1.3 (2013-03-17)
------------------------

BUG FIXES

   - Fixing bug from 1.1.2's bug fix, search now works properly w/ max_id

CHANGES IN VERSION 1.1.2 (2013-03-16)
------------------------

BUG FIXES

   - Bug fixes from abicky